--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,10 +3,10 @@
 
   <div padding>
     <ion-item>
-      <ion-input placeholder="Usuário" type="text" [(ngModel)]="usuario"></ion-input>
+      <ion-input placeholder="Usuário" type="text" [(ngModel)]="user"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input placeholder="Senha" type="password" [(ngModel)]="usuario"></ion-input>
+      <ion-input placeholder="Senha" type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
     <button ion-button block outline (click)="login()" color="light" class="login-button">
       Login
