--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,12 +12,12 @@
       Login
     </button>
   </div>
+
+  
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar class="footer">
-    <div (click)="goToRegister()">
+    <div (click)="goToRegister()" class="container-register">
       <span>Não tem uma conta? <strong>Cadastre-se agora</strong>.</span>
     </div>
-  </ion-toolbar>
 </ion-footer>
