--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -1,18 +1,56 @@
-<!--
-  Generated template for the EditProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>edit-profile</ion-title>
+    <ion-buttons start left>
+      <button ion-button icon-only (click)="dismiss()">
+        <ion-icon name="close"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>Editar perfil</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="update()">
+        <ion-icon name="checkmark" color="primary"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <div text-center>
+    <img [src]="user?.imgUser" class="edit-avatar">
+    <p class="change-text" (click)="changePhoto()">Alterar foto</p>
+  </div>
+
+
+  <ion-item>
+    <ion-label>
+      <ion-icon name="clipboard" color="gray"></ion-icon>
+    </ion-label>
+    <ion-input type="text" [value]="user?.name"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>
+      <ion-icon name="person" color="gray"></ion-icon>
+    </ion-label>
+    <ion-input type="text" [value]="user?.username"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>
+      <ion-icon name="quote" color="gray"></ion-icon>
+    </ion-label>
+    <ion-input type="text" [value]="user?.description"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>
+      <ion-icon name="mail" color="gray"></ion-icon>
+    </ion-label>
+    <ion-input type="text" [value]="user?.email"></ion-input>
+  </ion-item>
 
 </ion-content>
