--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,18 +1,27 @@
-<!--
-  Generated template for the RegisterPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>register</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
+  <div padding>
+    <ion-item>
+      <ion-input required placeholder="Nome completo" type="text" [(ngModel)]="name"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input required placeholder="Usuário" type="text" [(ngModel)]="username"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input required placeholder="E-mail" type="text" [(ngModel)]="email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input required placeholder="Senha" type="password" [(ngModel)]="password"></ion-input>
+    </ion-item>
+    <button ion-button block outline (click)="register()" color="light" class="login-button">
+      Cadastrar
+    </button>
+  </div>
 
+  
 </ion-content>
+
+<ion-footer>
+    <div (click)="goToLogin()" class="container-register">
+      <span>Já tem uma conta? <strong>Faça login</strong>.</span>
+    </div>
+</ion-footer>
